returning result of encrypt / decrypt

--- a/wasm/tests/web/index.html
+++ b/wasm/tests/web/index.html
@@ -14,7 +14,9 @@
 			await init();
 
 			console.log("start aes");
-			aes_test();
+			let string = aes_test();
+
+			console.log(string);
 
 			console.log("start ed");
 			ed_test();
