created aes key from shared sec

--- a/wasm/tests/web/index.html
+++ b/wasm/tests/web/index.html
@@ -19,7 +19,9 @@
 			console.log(string);
 
 			console.log("start ed");
-			ed_test();
+			let string2 = ed_test();
+
+			console.log(string2);
 		}
 
 		run();
