--- a/wasm/tests/web/index.html
+++ b/wasm/tests/web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<script type="module">
-		import init, { aes_test, ed_test } from './pkg/sendclose_wasm.js';
+		import init, { aes_test, ed_test, argon_test } from './pkg/sendclose_wasm.js';
 
 		async function run()
 		{
@@ -22,6 +22,11 @@
 			let string2 = ed_test();
 
 			console.log(string2);
+
+			console.log("start argon");
+			let string3 = argon_test();
+
+			console.log(string3);
 		}
 
 		run();
