--- a/wasm/tests/web/index.html
+++ b/wasm/tests/web/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<script type="module">
-		import init, { aes_test, ed_test, argon_test } from './pkg/sendclose_wasm.js';
+		import init, { aes_test, ed_test, argon_test, sign_test } from './pkg/sendclose_wasm.js';
 
 		async function run()
 		{
@@ -27,6 +27,11 @@
 			let string3 = argon_test();
 
 			console.log(string3);
+
+			console.log("start sign");
+			let string4 = sign_test();
+
+			console.log(string4);
 		}
 
 		run();
