update to the new public interface

--- a/wasm/tests/web/index.html
+++ b/wasm/tests/web/index.html
@@ -49,7 +49,11 @@
 
 			console.log(real1);
 			console.log("real 1 json pretty");
-			console.log(JSON.parse(real1))
+
+			/** @param {RegisterData} */
+			let register_out = JSON.parse(real1);
+
+			console.log(register_out)
 		}
 
 		run();
