change webpack output filename

--- a/implementation/js/sentc_js/tests/web_test/web_cdn/index.html
+++ b/implementation/js/sentc_js/tests/web_test/web_cdn/index.html
@@ -52,7 +52,7 @@
 		}
 	</script>
 
-	<script src="dist/main.min.js"></script>
+	<script src="dist/sentc.min.js"></script>
 
 	<script src="index.js"></script>
 </body>
