--- a/implementation/js/sentc_js/tests/integration/index.html
+++ b/implementation/js/sentc_js/tests/integration/index.html
@@ -15,6 +15,7 @@
 	<script>mocha.setup('bdd')</script>
 
 	<script src="user/userTests.js"></script>
+	<script src="group/groupTest.js"></script>
 
 	<script>
 		mocha.run();
